--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
+    "@ng-select/ng-select": "^4.0.1",
     "@syncfusion/ej2-angular-inputs": "^18.1.56",
     "angular-color-picker": "^1.0.11",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "moment": "^2.26.0",
+    "ng-multiselect-dropdown": "^0.2.10",
     "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
