Started working on create lesson modal

--- a/package.json
+++ b/package.json
@@ -11,20 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.9",
+    "@angular/animations": "^9.1.11",
+    "@angular/cdk": "~9.1.7",
     "@angular/common": "~9.1.7",
     "@angular/compiler": "~9.1.7",
     "@angular/core": "~9.1.7",
     "@angular/forms": "~9.1.7",
+    "@angular/material": "~9.1.7",
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
     "@ng-select/ng-select": "^4.0.1",
     "@syncfusion/ej2-angular-inputs": "^18.1.56",
+    "angular-2-daterangepicker": "^1.1.52",
     "angular-color-picker": "^1.0.11",
+    "angular-daterangepicker": "^0.2.3-alpha1",
+    "angular-material": "^1.1.23",
     "bootstrap": "^4.5.0",
+    "bootstrap-input-spinner": "^1.13.9",
     "current-week-number": "^1.0.7",
     "jquery": "^3.5.1",
+    "mat-range-datepicker": "^1.0.5",
     "moment": "^2.26.0",
     "ng-multiselect-dropdown": "^0.2.10",
     "ngx-toastr": "^12.1.0",
@@ -36,9 +43,9 @@
     "@angular-devkit/build-angular": "~0.901.6",
     "@angular/cli": "~9.1.6",
     "@angular/compiler-cli": "~9.1.7",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -47,6 +54,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "ngx-daterangepicker-material": "^3.0.1",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
